--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <div class="header">
         <img class="logo" src="" alt="Logo">
         <ul class="header-menu">
-            <li><a href=""></a>About Us</li>
-            <li>Services</li>
-            <li>FAQ</li>
-            <li>Contact</li>
+            <li><a href="">About Us</a></li>
+            <li><a href="">Services</a></li>
+            <li><a href="">Contac</a></li>
+            <li><a href="">FAQ</a></li>
         </ul> 
     </div>
     <div class="intro">
@@ -24,16 +24,16 @@
         <img src="" alt="">
     </div>
     <div class="staff">
-        <img src="" alt="">
+        <img src="" alt="img1">
         <p></p>
 
-        <img src="" alt="">
+        <img src="" alt="img2">
         <p></p>
         
-        <img src="" alt="">
+        <img src="" alt="img3">
         <p></p>
         
-        <img src="" alt="">
+        <img src="" alt="img4">
         <p></p>
     </div>
     <div class="mission">
