fixed footer text

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div>
                 <h1>title: text.</h1>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex.</p>
-                <button class="try">Try Now!</button>
+                <button class="try"><a href="">Try Now!</a></button>
             </div>
             <img src="./images/hero-placeholder.jpg" alt="intro img">
         </div>
@@ -54,14 +54,15 @@
         <div class="call">
             <div class="window">
                 <div>
-                    <h6>Interested?</h6>
-                    <p>Now it's the time to try our service, made from dogs to dogs out of dogssqQSQsQSQfsd csdcsxcqdcdvqd vsdvsdvsd vsdvsdvsdvsdv sdvsdvsdvsdvsdvsdvsdvsdvsdv.</p>
+                    <h2>Interested?</h6>
+                    <p>Now it's the time to try our service, made from dogs to dogs out of dogs. sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                 </div>
-                <button>Join Us!</button>
+                <button><a href="">Join Us!</a></button>
             </div>
         </div>
         <div class="footer">
-            <p>copyrights</p>
+            <p>Copyright © The Odin Project 2021</p>
+            <p>Owner: <strong>Arcangis</strong></p>
         </div>
     </div>
 </body>
