--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
-    <link rel="stylesheet" href="/Dogio/css/style.css">
+    <title>Dog.io</title>
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
     <nav>
-        <a href="./index.html"><img src="./images/logo-placeholder.png" alt="Logo"></a>
+        <a href="./index.html"><img src="./images/logo.png" alt="Logo"></a>
         <ul>
             <li><a href="./html/placeholder.html">About Us</a></li>
             <li><a href="./html/placeholder.html">Services</a></li>
@@ -19,45 +19,48 @@
     </nav>
     <div class="wrapper-content">
         <div class="hero">
-            <div>
-                <h1>title: text.</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex.</p>
-                <button class="try"><a href="">Try Now!</a></button>
+            <div class="hero-text">
+                <h1>Dog.io: Making your life better</h1>
+                <p><strong>Are you a human? Too tired of feeling alone? In need of a partner to uplift your day? Without the responsibility to take care of another being?</strong><br><br> If you answered <strong>"yes"</strong> to all of these questions (or not), we have the <strong>solution</strong> for you! Rent one of our dedicated employees to be your <strong>best friend</strong>.</p>
+                <button class="try"><a href="./html/placeholder.html">Try Now!</a></button>
             </div>
-            <img src="./images/hero-placeholder.jpg" alt="intro img">
+            <div class="hero-image">
+                <img src="./images/dog-CEO.jpg" alt="intro img">
+                <p>CEO: Ellon Husky</p>
+            </div>        
         </div>
         <div class="services">
-            <p>Some of our services beneficies:</p>
+            <p>Some of our services benefits:</p>
             <div class="services-container">
                 <div class="img-desc-wrapper">
-                    <img src="./images/headpat.png" alt="img1">
-                    <p>Free headpats!</p>
+                    <img src="./images/dog-award.jpg" alt="img1">
+                    <p><strong>Man's best friend</strong> award</p>
                 </div>
                 <div class="img-desc-wrapper">
-                    <img src="./images/headpat.png" alt="img2">
-                    <p>2-3 walks a week</p>
+                    <img src="./images/dog-diversity.jpg" alt="img2">
+                    <p>More than <strong>100 breeds</strong> to choose</p>
                 </div>
                 <div class="img-desc-wrapper">
-                    <img src="./images/headpat.png" alt="img3">
-                    <p>Unlimited bellie rubs</p>
+                    <img src="./images/dog-travel.jpg" alt="img3">
+                    <p>Available across <strong>20 countries</strong></p>
                 </div>
                 <div class="img-desc-wrapper">
-                    <img src="./images/headpat.png" alt="img4">
-                    <p>No cat included</p>
+                    <img src="./images/no-cat.jpg" alt="img4">
+                    <p>Cats / Birds / Fishes <strong>NOT</strong> included</p>
                 </div>    
             </div>
         </div>
-        <div class="mission">
-            <q>placeholder</q>   
-            <p>-me</p>     
+        <div class="quote">
+            <q>The only creatures that are evolved enough to convey pure love are dogs <span class="line-through">and infants</span>.</q>   
+            <p>— Johnny Depp</p>
         </div>
         <div class="call">
             <div class="window">
                 <div>
                     <h2>Interested?</h6>
-                    <p>Now it's the time to try our service, made from dogs to dogs out of dogs. sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                    <p>Now is the time to try our dog service, made by dogs, from dogs, for humans.</p>
                 </div>
-                <button><a href="">Join Us!</a></button>
+                <button><a href="./html/placeholder.html">Rent Now!</a></button>
             </div>
         </div>
         <div class="footer">
